Make sure menus are not cropped

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -450,13 +450,13 @@
     transform: scale(.95)
     bottom: -100%
     height: 0
-    opacity: 0
+    opacity: 0 !important
 
     &.fp-active
       transform: scale(1)
       height: auto
       bottom: 3.2em
-      opacity: 1
+      opacity: 1 !important
 
 
     > *
